--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -39,7 +39,7 @@ bindtr = $mainMod, A, exec, $HOME/.config/eww/scripts/closebar.sh
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 
 # Waybar / Bar related
-bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, B, exec, pkill blueman-manager || blueman-manager &
 # bind = $mainMod, B, exec, $HOME/.config/eww/scripts/openbar.sh
 # bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
 bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
