--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -19,10 +19,10 @@ listener {
     on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
 }
 
-listener {
-    timeout = 30                           # 30 seconds
-    on-timeout = pidof hyprlock && systemctl suspend # turns off the screen if hyprlock is active
-}
+# listener {
+#     timeout = 30                           # 30 seconds
+#     on-timeout = pidof hyprlock && systemctl suspend # turns off the screen if hyprlock is active
+# }
 
 # Warn
 listener {
