--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,32 +1,32 @@
-foreground         #FFF3DE
-background         #0D0F11
+foreground         #FFE0C5
+background         #0C0F0F
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0D0F11
-active_tab_background     #FFF3DE
-inactive_tab_foreground   #FFF3DE
-inactive_tab_background   #0D0F11
+active_tab_foreground     #0C0F0F
+active_tab_background     #FFE0C5
+inactive_tab_foreground   #FFE0C5
+inactive_tab_background   #0C0F0F
 
-active_border_color   #FFF3DE
-inactive_border_color #0D0F11
-bell_border_color     #9C7363
+active_border_color   #FFE0C5
+inactive_border_color #0C0F0F
+bell_border_color     #7E8277
 
-color0      #383A3C
-color1		#9C7363
-color2		#B4675C
-color3		#648676
-color4		#937A5C
-color5		#BA8E72
-color6		#BEA57A
-color7		#F6E5C8
-color8		#ACA08C
-color9		#AD6B50
-color10		#E06757
-color11		#85B29D
-color12		#C4A37A
-color13		#F8BD98
-color14		#FEDCA2
-color15		#F6E5C8
+color0      #373A3A
+color1		#7E8277
+color2		#8F7E6E
+color3		#AC7254
+color4		#847D66
+color5		#977A5E
+color6		#BE7C43
+color7		#F6CAA3
+color8		#AC8D72
+color9		#818876
+color10		#9C8166
+color11		#D98457
+color12		#A79D7D
+color13		#CAA27D
+color14		#FEA559
+color15		#F6CAA3
