--- a/.config/hypr/UserConfigs/Monitors.conf
+++ b/.config/hypr/UserConfigs/Monitors.conf
@@ -7,10 +7,10 @@
 
 
 # Monitors
-monitor=eDP-2,2560x1600@240,1920x0,1.25
-# monitor=eDP-1,1920x1080@240,0x1080,125
-monitor=eDP-1,2560x1600@60,1920x0,1.25
-monitor=HDMI-A-1,1920x1080@74.97,0x0,1.0
+monitor =HDMI-A-1, 1920x1080@120, -1920x0, 1.0, bitdepth, 10, cm, hdr
+monitor =eDP-2, 2560x1600@240, 0x0, 1.25
+monitor =eDP-1, 2560x1600@240, 0x0, 1.25
+monitor = , preferred, auto, 1
 
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
