--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -1,27 +1,27 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule = float, org.kde.polkit-kde-authentication-agent-1
-windowrule = float, nm-connection-editor|blueman-manager
-windowrule = float, pavucontrol
-windowrule = float, org.pulseaudio.pavucontrol
-windowrule = float, minirt_bonus
-windowrule = float, nwg-look|qt5ct|mpv
-windowrule = float, onedriver|onedriver-launcher
-windowrule = float, eog
-windowrule = float, zoom
-windowrule = float, rofi
-windowrule = float, gnome-system-monitor
+windowrule = float, class:org.kde.polkit-kde-authentication-agent-1
+windowrule = float, class:nm-connection-editor|blueman-manager
+windowrule = float, class:pavucontrol
+windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = float, class:minirt_bonus
+windowrule = float, class:nwg-look|qt5ct|mpv
+windowrule = float, class:onedriver|onedriver-launcher
+windowrule = float, class:eog
+windowrule = float, class:zoom
+windowrule = float, class:rofi
+windowrule = float, class:gnome-system-monitor
 windowrulev2 = float, title:^(Calculator)
-windowrule = float, yad
+windowrule = float, class:yad
 windowrule = float, title:^(shader_test)$
 
-windowrule = noblur,gamescope
-windowrule = fullscreen,gamescope
-windowrule = workspace 6 silent,^(gamescope)$
-windowrule = pseudo,fcitx
+windowrule = noblur,class:gamescope
+windowrule = fullscreen,class:gamescope
+windowrule = workspace 6 silent,class:^(gamescope)$
+windowrule = pseudo,class:fcitx
 
-windowrule = center,^(pavucontrol) 
+windowrule = center,class:^(pavucontrol) 
 
 windowrulev2 = float, workspace:8
 windowrulev2 = center 0.6, workspace:8
@@ -42,6 +42,7 @@ windowrulev2 = workspace 5 silent, class:^([Ss]team)$,title:^([Ss]team)$
 windowrulev2 = workspace 5 silent, class:^(lutris)$
 windowrulev2 = workspace 6, class:^(virt-manager)$
 windowrulev2 = workspace 7 silent, class:^(discord)$
+windowrulev2 = workspace 7 silent, class:^(com.discordapp.Discord)$
 windowrulev2 = workspace 7 silent, class:^([Aa]rm[Cc]ord)$
 windowrulev2 = workspace 7 silent, class:^([Vv]esk[Tt]op)$
 windowrulev2 = workspace 7 silent, title: ^(web.whatsapp.com_/)$
@@ -54,6 +55,7 @@ windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 windowrulev2 = opacity 0.9 0.8, class:^(vesktop)$
 windowrulev2 = opacity 0.9 0.8, title:^(WhatsApp Web)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser)$
+windowrulev2 = opacity 0.95 0.9, class:^(com.discordapp.Discord)$
 windowrulev2 = opacity 1 0.97, class:^(zen)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser-dev)$
 windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
