--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0D0F11)
-$backgroundColTransparent = rgba(0D0F1160)
-$foreground = rgb(FFF3DE)
-$color0 = rgb(383A3C)
-$color1 = rgb(9C7363)
-$color2 = rgb(B4675C)
-$color2_shadow = rgba(B4675Ca0)
-$color3 = rgb(648676)
-$color4 = rgb(937A5C)
-$color5 = rgb(BA8E72)
-$color6 = rgb(BEA57A)
-$color7 = rgb(F6E5C8)
-$color8 = rgb(ACA08C)
-$color9 = rgb(AD6B50)
-$color10 = rgb(E06757)
-$color11 = rgb(85B29D)
-$color12 = rgb(C4A37A)
-$color13 = rgb(F8BD98)
-$color14 = rgb(FEDCA2)
-$color15 = rgb(F6E5C8)
+$background = rgb(0C0F0F)
+$backgroundColTransparent = rgba(0C0F0F60)
+$foreground = rgb(FFE0C5)
+$color0 = rgb(373A3A)
+$color1 = rgb(7E8277)
+$color2 = rgb(8F7E6E)
+$color2_shadow = rgba(8F7E6Ea0)
+$color3 = rgb(AC7254)
+$color4 = rgb(847D66)
+$color5 = rgb(977A5E)
+$color6 = rgb(BE7C43)
+$color7 = rgb(F6CAA3)
+$color8 = rgb(AC8D72)
+$color9 = rgb(818876)
+$color10 = rgb(9C8166)
+$color11 = rgb(D98457)
+$color12 = rgb(A79D7D)
+$color13 = rgb(CAA27D)
+$color14 = rgb(FEA559)
+$color15 = rgb(F6CAA3)
