--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -29,6 +29,7 @@ env = PATH, $HOME/game/:$PATH
 # vulkan
 env = WLR_RENDERER,vulkan
 env = AQ_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+env = AQ_NO_MODIFIERS,1
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
