--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -44,6 +44,7 @@ exec-once = fcitx5-remote -r
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle &
+exec-once = $UserScripts/Sunset.sh
 
 # Rainbow borders
 # exec-once = $UserScripts/RainbowBorders.sh
