--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -60,7 +60,7 @@ decoration {
   dim_strength = 0.05
 
   shadow {
-    enabled=true
+    enabled=false
     range=4
     render_power = 1
     color = $color2_shadow
@@ -68,7 +68,7 @@ decoration {
   }
 
   blur {
-    enabled = true	
+    enabled = true
     size = 6
     passes = 3
 
