--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -1,6 +1,8 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+workspace = name:vert, monitor:desc:AOC 24B20JH3 AP20451J04006, default:true
+
 windowrule = float, class:org.kde.polkit-kde-authentication-agent-1
 windowrule = float, class:nm-connection-editor|blueman-manager
 windowrule = float, class:pavucontrol
@@ -12,7 +14,7 @@ windowrule = float, class:eog
 windowrule = float, class:zoom
 windowrule = float, class:rofi
 windowrule = float, class:gnome-system-monitor
-windowrulev2 = float, title:^(Calculator)
+windowrule = float, title:^(Calculator)
 windowrule = float, class:yad
 windowrule = float, title:^(shader_test)$
 
@@ -23,62 +25,62 @@ windowrule = pseudo,class:fcitx
 
 windowrule = center,class:^(pavucontrol) 
 
-windowrulev2 = float, workspace:8
-windowrulev2 = center 0.6, workspace:8
+windowrule = float, workspace:8
+windowrule = center 0.6, workspace:8
 
-windowrulev2 = float, initialTitle:(Discord Popout)
-windowrulev2 = pin, initialTitle:(Discord Popout)
-windowrulev2 = size 25% 25%, initialTitle:(Discord Popout)
-windowrulev2 = move 100%-w-25 100%-w-25, initialTitle:(Discord Popout)
-# windowrule v2
-windowrulev2 = workspace 1, class:^(thunderbird)$
-windowrulev2 = workspace 2, class:^(firefox)$
-windowrulev2 = workspace 2 silent, title:^(shader_test)$
-windowrulev2 = workspace 2, class:^(Firefox-esr)$
-windowrulev2 = workspace 2, class:^(Microsoft-edge-beta)$ 
-# windowrulev2 = workspace 3, class:^([Tt]hunar)$
-windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 5 silent, class:^([Ss]team)$,title:^([Ss]team)$
-windowrulev2 = workspace 5 silent, class:^(lutris)$
-windowrulev2 = workspace 6, class:^(virt-manager)$
-windowrulev2 = workspace 7 silent, class:^(discord)$
-windowrulev2 = workspace 7 silent, class:^(com.discordapp.Discord)$
-windowrulev2 = workspace 7 silent, class:^([Aa]rm[Cc]ord)$
-windowrulev2 = workspace 7 silent, class:^([Vv]esk[Tt]op)$
-windowrulev2 = workspace 7 silent, title: ^(web.whatsapp.com_/)$
-windowrulev2 = workspace 7 silent, title: ^(web.telegram.org_/)$
-windowrulev2 = workspace 7 silent, class:^(WebCord)$
-windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
+windowrule = float, initialTitle:(Discord Popout)
+windowrule = pin, initialTitle:(Discord Popout)
+windowrule = size 25% 25%, initialTitle:(Discord Popout)
+windowrule = move 100%-w-25 100%-w-25, initialTitle:(Discord Popout)
+# windowrule 
+windowrule = workspace 1, class:^(thunderbird)$
+windowrule = workspace 2, class:^(firefox)$
+windowrule = workspace 2 silent, title:^(shader_test)$
+windowrule = workspace 2, class:^(Firefox-esr)$
+windowrule = workspace 2, class:^(Microsoft-edge-beta)$ 
+# windowrule = workspace 3, class:^([Tt]hunar)$
+windowrule = workspace 4, class:^(com.obsproject.Studio)$
+windowrule = workspace 5 silent, class:^([Ss]team)$,title:^([Ss]team)$
+windowrule = workspace 5 silent, class:^(lutris)$
+windowrule = workspace 6, class:^(virt-manager)$
+windowrule = workspace name:vert silent, class:^(discord)$
+windowrule = workspace name:vert silent, class:^(com.discordapp.Discord)$
+windowrule = workspace name:vert silent, class:^([Aa]rm[Cc]ord)$
+windowrule = workspace name:vert silent, class:^([Vv]esk[Tt]op)$
+windowrule = workspace 7 silent, title: ^(web.whatsapp.com_/)$
+windowrule = workspace 7 silent, title: ^(web.telegram.org_/)$
+windowrule = workspace 7 silent, class:^(WebCord)$
+windowrule = workspace 9 silent, class:^([Aa]udacious)$
 
 #opacity (transparent) #enable as desired
-# windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
-windowrulev2 = opacity 0.9 0.8, class:^(vesktop)$
-windowrulev2 = opacity 0.9 0.8, title:^(WhatsApp Web)$
-windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser)$
-windowrulev2 = opacity 0.95 0.9, class:^(com.discordapp.Discord)$
-windowrulev2 = opacity 1 0.97, class:^(zen)$
-windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser-dev)$
-windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
-windowrulev2 = opacity 0.9 0.7, class:^(Firefox-esr)$
-windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
-windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
-windowrulev2 = opacity 0.9 0.7, class:^(gedit)$
-windowrulev2 = opacity 0.97 override 0.9 override 0.97 override, class:^(kitty)$
-windowrulev2 = opacity 0.9 override 0.8 override 0.9 override, class:^(com.mitchellh.ghostty)$
-windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
-windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
-windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
-windowrulev2 = opacity 0.9 0.7, class:^(yad)$
-windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
-windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
-windowrulev2 = immediate, class:^(osu)$
-windowrulev2 = opacity 1.0 0.5, initialTitle:(Discord Popout)
+# windowrule = opacity 0.9 0.6, class:^([Rr]ofi)$
+windowrule = opacity 0.9 0.8, class:^(vesktop)$
+windowrule = opacity 0.9 0.8, title:^(WhatsApp Web)$
+windowrule = opacity 0.9 0.7, class:^(Brave-browser)$
+windowrule = opacity 0.95 0.9, class:^(com.discordapp.Discord)$
+windowrule = opacity 1 0.97, class:^(zen)$
+windowrule = opacity 0.9 0.7, class:^(Brave-browser-dev)$
+windowrule = opacity 0.9 0.7, class:^(firefox)$
+windowrule = opacity 0.9 0.7, class:^(Firefox-esr)$
+windowrule = opacity 0.9 0.8, class:^([Tt]hunar)$
+windowrule = opacity 0.8 0.6, class:^(pcmanfm-qt)$
+windowrule = opacity 0.9 0.7, class:^(gedit)$
+windowrule = opacity 0.97 override 0.9 override 0.97 override, class:^(kitty)$
+windowrule = opacity 0.9 override 0.8 override 0.9 override, class:^(com.mitchellh.ghostty)$
+windowrule = opacity 0.9 0.7, class:^(mousepad)$
+windowrule = opacity 0.9 0.7, class:^(codium-url-handler)$
+windowrule = opacity 0.9 0.7, class:^(VSCodium)$
+windowrule = opacity 0.9 0.7, class:^(yad)$
+windowrule = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
+windowrule = opacity 0.9 0.7, class:^([Aa]udacious)$
+windowrule = immediate, class:^(osu)$
+windowrule = opacity 1.0 0.5, initialTitle:(Discord Popout)
 
 
-# windowrulev2 = stayfocused, class:^([Rr]ofi)$
-windowrulev2 = stayfocused, class:^([Ww]ofi)$
-# windowrulev2 = forceinput, class:^([Rr]ofi)$
-# windowrulev2 = forceinput, class:^([Ww]ofi)$
+# windowrule = stayfocused, class:^([Rr]ofi)$
+windowrule = stayfocused, class:^([Ww]ofi)$
+# windowrule = forceinput, class:^([Rr]ofi)$
+# windowrule = forceinput, class:^([Ww]ofi)$
 # layerrule = unset, rofi
 layerrule = blur, logout_dialog
 
@@ -121,20 +123,20 @@ layerrule = animation slide, music
 
 layerrule = animation none, swww-daemon
 
-#windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
-#windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
-#windowrulev2 = opacity 0.8 0.8, pinned:1
+#windowrule = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
+#windowrule = bordercolor rgb(282737) rgb(1E1D2D), floating:1
+#windowrule = opacity 0.8 0.8, pinned:1
 
 # Picture-in-a-Picture (PIP) rules: Oddly, some need re-duplication.  This is because the window for
 # PIP changes after on first launch, and will not inherant the rules...
-windowrulev2=opacity 0.95 0.75,title:^(Picture-in-Picture)$ # for opacity: [focus num] [bg num]
+windowrule = opacity 0.95 0.75,title:^(Picture-in-Picture)$ # for opacity: [focus num] [bg num]
 # Interestingly, the opacity rule above doesn't need the reduplication?
-windowrulev2=pin,title:^(Picture-in-Picture)$ 
-#windowrulev2=pin,title:^(Firefox)$ 
-windowrulev2=float, title:^(Picture-in-Picture)$
-windowrulev2=float, title:^(client)$
-#windowrulev2=float, title:^(Firefox)$
-windowrulev2=size 25% 25%,title:^(Picture-in-Picture)$ 
-#windowrulev2=size 25% 25%,title:^(Firefox)$ 
-windowrulev2=move 72% 7%,title:^(Picture-in-Picture)$ 
-#windowrulev2=move 72% 7%,title:^(Firefox)$ 
+windowrule = pin,title:^(Picture-in-Picture)$ 
+#windowrule=pin,title:^(Firefox)$ 
+windowrule = float, title:^(Picture-in-Picture)$
+windowrule = float, title:^(client)$
+#windowrule=float, title:^(Firefox)$
+windowrule = size 25% 25%,title:^(Picture-in-Picture)$ 
+#windowrule=size 25% 25%,title:^(Firefox)$ 
+windowrule = move 72% 7%,title:^(Picture-in-Picture)$ 
+#windowrule=move 72% 7%,title:^(Firefox)$ 
