--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0C0F0F)
-$backgroundColTransparent = rgba(0C0F0F60)
-$foreground = rgb(FFE0C5)
-$color0 = rgb(373A3A)
-$color1 = rgb(7E8277)
-$color2 = rgb(8F7E6E)
-$color2_shadow = rgba(8F7E6Ea0)
-$color3 = rgb(AC7254)
-$color4 = rgb(847D66)
-$color5 = rgb(977A5E)
-$color6 = rgb(BE7C43)
-$color7 = rgb(F6CAA3)
-$color8 = rgb(AC8D72)
-$color9 = rgb(818876)
-$color10 = rgb(9C8166)
-$color11 = rgb(D98457)
-$color12 = rgb(A79D7D)
-$color13 = rgb(CAA27D)
-$color14 = rgb(FEA559)
-$color15 = rgb(F6CAA3)
+$background = rgb(0E0F11)
+$backgroundColTransparent = rgba(0E0F1160)
+$foreground = rgb(FFFAE9)
+$color0 = rgb(393A3C)
+$color1 = rgb(947C43)
+$color2 = rgb(4D868F)
+$color2_shadow = rgba(4D868Fa0)
+$color3 = rgb(AF897E)
+$color4 = rgb(AD977F)
+$color5 = rgb(BA9E4A)
+$color6 = rgb(BFB591)
+$color7 = rgb(F6F0D8)
+$color8 = rgb(ACA897)
+$color9 = rgb(BE9C4C)
+$color10 = rgb(66B2BE)
+$color11 = rgb(E9B7A8)
+$color12 = rgb(E6C9A9)
+$color13 = rgb(F8D263)
+$color14 = rgb(FEF1C1)
+$color15 = rgb(F6F0D8)
