--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,32 +1,32 @@
-foreground         #FFE0C5
-background         #0C0F0F
+foreground         #FFFAE9
+background         #0E0F11
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0C0F0F
-active_tab_background     #FFE0C5
-inactive_tab_foreground   #FFE0C5
-inactive_tab_background   #0C0F0F
+active_tab_foreground     #0E0F11
+active_tab_background     #FFFAE9
+inactive_tab_foreground   #FFFAE9
+inactive_tab_background   #0E0F11
 
-active_border_color   #FFE0C5
-inactive_border_color #0C0F0F
-bell_border_color     #7E8277
+active_border_color   #FFFAE9
+inactive_border_color #0E0F11
+bell_border_color     #947C43
 
-color0      #373A3A
-color1		#7E8277
-color2		#8F7E6E
-color3		#AC7254
-color4		#847D66
-color5		#977A5E
-color6		#BE7C43
-color7		#F6CAA3
-color8		#AC8D72
-color9		#818876
-color10		#9C8166
-color11		#D98457
-color12		#A79D7D
-color13		#CAA27D
-color14		#FEA559
-color15		#F6CAA3
+color0      #393A3C
+color1		#947C43
+color2		#4D868F
+color3		#AF897E
+color4		#AD977F
+color5		#BA9E4A
+color6		#BFB591
+color7		#F6F0D8
+color8		#ACA897
+color9		#BE9C4C
+color10		#66B2BE
+color11		#E9B7A8
+color12		#E6C9A9
+color13		#F8D263
+color14		#FEF1C1
+color15		#F6F0D8
