--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#373A3A'
-gradient_color_2 = '#8F7E6E'
-gradient_color_3 = '#AC7254'
-gradient_color_4 = '#977A5E'
-gradient_color_5 = '#F6CAA3'
-gradient_color_6 = '#A79D7D'
-gradient_color_7 = '#CAA27D'
-gradient_color_8 = '#F6CAA3'
+gradient_color_1 = '#393A3C'
+gradient_color_2 = '#4D868F'
+gradient_color_3 = '#AF897E'
+gradient_color_4 = '#BA9E4A'
+gradient_color_5 = '#F6F0D8'
+gradient_color_6 = '#E6C9A9'
+gradient_color_7 = '#F8D263'
+gradient_color_8 = '#F6F0D8'
 
 [color]
 
