--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -16,10 +16,10 @@ $ewwScript = $HOME/.config/eww/scripts
 # rofi App launcher
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
 # bind = $mainMod, space, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
-bind = $mainMod, space, exec, ags toggle launcher
+bind = $mainMod, space, exec, pidof ags || hyprctl dispatch exec 'ags run --gtk4  &> $HOME/.cache/ags/std.log&' && ags toggle launcher
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
-bind = $mainMod, Z, exec, ags toggle launcher --instance debug
+bind = $mainMod, Z, exec, pidof ags || hyprctl dispatch exec 'ags run --gtk4  &> $HOME/.cache/ags/std.log&' && ags toggle wallpaperPicker --instance debug
 # bind = $mainMod, Z, overview:toggle
 
 # bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
