--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -14,9 +14,8 @@ general {
 # turn off screen faster if session is already locked
 # (disabled by default)
 listener {
-    timeout = 30                            # 30 seconds
-    on-timeout = pidof hyprlock && hyprctl dispatch dpms off # turns off the screen if hyprlock is active
-    on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
+    timeout = 600                            # 30 seconds
+    on-timeout = pidof hyprlock && systemctl hibernate # turns off the screen if hyprlock is active
 }
 
 # listener {
@@ -54,7 +53,7 @@ listener {
 
 # Suspend # disabled by default
 listener {
-   timeout = 900                            # 20 min
-   on-timeout = systemctl suspend # command to run when timeout has passed
+   timeout = 1200                            # 20 min
+   on-timeout = systemctl hibernate # command to run when timeout has passed
     # on-resume = notify-send "Welcome back to your desktop!"  # command to run when activity is detected after timeout has fired.
 }
