--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -5,8 +5,8 @@ workspace = name:vert, monitor:desc:AOC 24B20JH3 AP20451J04006, default:true
 
 windowrule = float, class:org.kde.polkit-kde-authentication-agent-1
 windowrule = float, class:nm-connection-editor|blueman-manager
-windowrule = float, class:pavucontrol
 windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = size 700 500, class:org.pulseaudio.pavucontrol
 windowrule = float, class:minirt_bonus
 windowrule = float, class:nwg-look|qt5ct|mpv
 windowrule = float, class:onedriver|onedriver-launcher
@@ -35,6 +35,7 @@ windowrule = move 100%-w-25 100%-w-25, initialTitle:(Discord Popout)
 # windowrule 
 windowrule = workspace 1, class:^(thunderbird)$
 windowrule = workspace 2, class:^(firefox)$
+windowrule = workspace 4, class:^(Slicer)$
 windowrule = workspace 2 silent, title:^(shader_test)$
 windowrule = workspace 2, class:^(Firefox-esr)$
 windowrule = workspace 2, class:^(Microsoft-edge-beta)$ 
@@ -87,6 +88,7 @@ layerrule = blur, logout_dialog
 layerrule = blur, rofi
 layerrule = blur, launcher
 layerrule = blur, wallpaperPicker
+layerrule = blur, quickEdit
 # layerrule = xray 1, rofi
 
 # eww bar
