--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -32,7 +32,7 @@ bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
 # FEATURES / EXTRAS (UserScripts)
-bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
+bind = $mainMod, E, exec, ags toggle quickEdit # Quick Edit Hyprland Settings
 bind = $mainMod, M, exec, $HOME/.config/eww/scripts/musicToggle.sh
 bindt = $mainMod, A, exec, $HOME/.config/eww/scripts/openbar.sh
 bindtr = $mainMod, A, exec, $HOME/.config/eww/scripts/closebar.sh
