--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0E0F11)
-$backgroundColTransparent = rgba(0E0F1160)
-$foreground = rgb(FFFAE9)
-$color0 = rgb(393A3C)
-$color1 = rgb(947C43)
-$color2 = rgb(4D868F)
-$color2_shadow = rgba(4D868Fa0)
-$color3 = rgb(AF897E)
-$color4 = rgb(AD977F)
-$color5 = rgb(BA9E4A)
-$color6 = rgb(BFB591)
-$color7 = rgb(F6F0D8)
-$color8 = rgb(ACA897)
-$color9 = rgb(BE9C4C)
-$color10 = rgb(66B2BE)
-$color11 = rgb(E9B7A8)
-$color12 = rgb(E6C9A9)
-$color13 = rgb(F8D263)
-$color14 = rgb(FEF1C1)
-$color15 = rgb(F6F0D8)
+$background = rgb(0F0F12)
+$backgroundColTransparent = rgba(0F0F1260)
+$foreground = rgb(FEEADE)
+$color0 = rgb(393A3E)
+$color1 = rgb(987170)
+$color2 = rgb(8A7B77)
+$color2_shadow = rgba(8A7B77a0)
+$color3 = rgb(857E8D)
+$color4 = rgb(A6725F)
+$color5 = rgb(987E76)
+$color6 = rgb(BD9279)
+$color7 = rgb(F5D9C8)
+$color8 = rgb(AC988C)
+$color9 = rgb(AC6C6A)
+$color10 = rgb(9E8680)
+$color11 = rgb(978CA2)
+$color12 = rgb(D08367)
+$color13 = rgb(CBA89E)
+$color14 = rgb(FCC3A1)
+$color15 = rgb(F5D9C8)
