--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,32 +1,32 @@
-foreground         #FFFAE9
-background         #0E0F11
+foreground         #FEEADE
+background         #0F0F12
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0E0F11
-active_tab_background     #FFFAE9
-inactive_tab_foreground   #FFFAE9
-inactive_tab_background   #0E0F11
+active_tab_foreground     #0F0F12
+active_tab_background     #FEEADE
+inactive_tab_foreground   #FEEADE
+inactive_tab_background   #0F0F12
 
-active_border_color   #FFFAE9
-inactive_border_color #0E0F11
-bell_border_color     #947C43
+active_border_color   #FEEADE
+inactive_border_color #0F0F12
+bell_border_color     #987170
 
-color0      #393A3C
-color1		#947C43
-color2		#4D868F
-color3		#AF897E
-color4		#AD977F
-color5		#BA9E4A
-color6		#BFB591
-color7		#F6F0D8
-color8		#ACA897
-color9		#BE9C4C
-color10		#66B2BE
-color11		#E9B7A8
-color12		#E6C9A9
-color13		#F8D263
-color14		#FEF1C1
-color15		#F6F0D8
+color0      #393A3E
+color1		#987170
+color2		#8A7B77
+color3		#857E8D
+color4		#A6725F
+color5		#987E76
+color6		#BD9279
+color7		#F5D9C8
+color8		#AC988C
+color9		#AC6C6A
+color10		#9E8680
+color11		#978CA2
+color12		#D08367
+color13		#CBA89E
+color14		#FCC3A1
+color15		#F5D9C8
