--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#393A3C'
-gradient_color_2 = '#4D868F'
-gradient_color_3 = '#AF897E'
-gradient_color_4 = '#BA9E4A'
-gradient_color_5 = '#F6F0D8'
-gradient_color_6 = '#E6C9A9'
-gradient_color_7 = '#F8D263'
-gradient_color_8 = '#F6F0D8'
+gradient_color_1 = '#393A3E'
+gradient_color_2 = '#8A7B77'
+gradient_color_3 = '#857E8D'
+gradient_color_4 = '#987E76'
+gradient_color_5 = '#F5D9C8'
+gradient_color_6 = '#D08367'
+gradient_color_7 = '#CBA89E'
+gradient_color_8 = '#F5D9C8'
 
 [color]
 
