--- a/.config/hypr/UserConfigs/Monitors.conf
+++ b/.config/hypr/UserConfigs/Monitors.conf
@@ -11,6 +11,7 @@
 monitor =desc:Thermotrex Corporation TL160ADMP03-0, 2560x1600@60, 0x0, 1.25
 monitor =desc:AOC 24B20JH3 AP20451J04006, 1920x1080@120,-3640x-0, 1.0, vrr, 0, transform, 1
 monitor =desc:Samsung Electric Company LF24T35 H4ZRC01526, 1920x1080@60, -2220x-1080, 1.0
+# monitor =desc:AOC Q27G41XMN 2QTR2JA001822, 2560x1440@180, -2560x0, 1.0, bitdepth, 10
 monitor =desc:AOC Q27G41XMN 2QTR2JA001822, 2560x1440@180, -2560x0, 1.0, bitdepth, 10
 monitor = , preferred, auto, 1
 
