--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -19,11 +19,13 @@ $ewwScript = $HOME/.config/eww/scripts
 bind = $mainMod, space, exec, pidof ags || hyprctl dispatch exec 'ags run --gtk4  &> $HOME/.cache/ags/std.log&' && ags toggle launcher
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
-bind = $mainMod, Z, exec, pidof ags || hyprctl dispatch exec 'ags run --gtk4  &> $HOME/.cache/ags/std.log&' && ags toggle wallpaperPicker --instance debug
+
+$agsWin = quickEdit
+bind = $mainMod, Z, exec, ags toggle $agsWin --instance debug
 # bind = $mainMod, Z, overview:toggle
 
 # bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
-bind = $mainMod, W, exec, ags toggle wallpaperPicker
+bind = $mainMod, W, exec, pidof ags || hyprctl dispatch exec 'ags run --gtk4  &> $HOME/.cache/ags/std.log&' && ags toggle wallpaperPicker
 bind = $mainMod SHIFT, W, exec, swww query && swww kill || swww-daemon &
 bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
